# Unicorn

./: ..gitignore.un~  .gitignore  README.md  unicorn.code-workspace
.github/: FUNDING.yml
.img/: unicorn.mov
DeltaAgent/: Cargo.toml
DeltaAgent/src/: main.rs
client/: Makefile  build.gradle.kts  client.pro  main.cpp  settings.gradle.kts  testServer.py
client-cli/: .history  main.py  requirements.txt
client-cli/lib/: cli.py  commands.py  http.py  interactive.py  messages.py  wsclient.py
client-cli/tools/: upx.py
client/src/: app.html  index.html  main.js  styles.css
client/src-tauri/: Cargo.toml  tauri.conf.json
cliserver/: bm.py  manager.py  testclient.py  unicorn.py  utils.py
delta-agent/: Cargo.toml  build.sh  test_server.py
delta-agent/.cargo/: config.toml
delta-agent/src/: main.rs
delta-agent/src/evasion/: mod.rs
server/: .gitignore  hadler.py  handler.py  main.js  main.py  memray-flamegraph-output.html  output.mem  package-lock.json  package.json  requirements.txt  rest.py  run.cmd  run.sh  test.py  unicorn.py  wserver.py
server/api/: listener.py  payconf.py
server/config/: config.toml  domain.crt  domain.csr  domain.key  jwt.key  private.key  server.csr  server.toml  website.crt
server/lib/: api.py  crypto.py  globals.py  http.py  listener.py  logger.py  response.py  vglobals.py
server/listeners/: default.py  template.py
server/src/: main.py
testagent/: Cargo.toml
testagent/.cargo/: config.toml
testagent/src/: main.rs
testagent/src/commands/: mod.rs
testagent/src/crypto/: mod.rs
testagent/src/response/: mod.rs
tests/: table.py
(+50 files in other folders)
