[package]
name = "delta_agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3

[dependencies]
rand = "0.8.5"
rsa = { version = "0.9.2", features = ["pkcs5"] }
flate2 = { version = "1.0.28", features = ["zlib"] }
salsa20 = "0.10.2"
typenum = "1.17.0"
