[package]
name = "testagent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rsa = { version = "0.9.6", features = ["pkcs5"] }
salsa20 = "0.10.2"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
